# MuRuby-Mobile

./: .gitignore
ClientBuild_192.168.99.200/: Mu.ini  QeffectsGL.ini  StartClient.bat  config.ini
ClientBuild_192.168.99.200/Data/: Macro.txt  Messages.txt
ClientBuild_192.168.99.200/Data/Custom/: HPBarFrame.ozt  HPBarValue.ozj  MaQRNapThe.OZJ  SocketItem.bmd  Text_Eng.ini  VIPCharRank.txt
ClientBuild_192.168.99.200/Data/Interface/: DRAWBARFLAG.ozt  DRAWBARIMAGE.ozt  FontTest.OZT  FontTest_+.OZT  IMAGE_HP.ozt  IMAGE_SD.ozt  MacroUI_RangeMinus.ozt  Minimap_positionA.OZT  barexpline.ozt  lo_back_im02.OZJ  lo_back_im03.OZJ  lo_back_im04.OZJ  lo_back_im05.OZJ  lo_back_im06.OZJ  lo_back_s5_im01.ozj  lo_back_s5_im02.ozj  lo_back_s5_im04.ozj  lo_back_s5_im05.ozj  lo_back_s5_im06.ozj  login_back.OZT  login_me.OZT  mini_map_ui_cancel.OZT  minimap_positione.ozt  new_Master_Icon.OZJ  new_Master_arrow01.OZT  new_Master_back01.OZJ  new_Master_back02.OZJ  new_Master_box.OZT  new_Master_exit.OZJ  new_Master_non_Icon.OZJ  new_master_arrow09.ozt  new_master_back01x.ozj  newui_Bt_openshop.OZT  newui_Exbar.OZJ  newui_Message_03.OZT  newui_Message_Line.OZT  newui_btn_empty_small.OZT  newui_btn_emptya.ozt  newui_cha_textbox02.OZT  newui_chainfo_btn_level.OZT  (+41 more)
ClientBuild_192.168.99.200/Data/Interface - Copy/: Exbar_Master.OZJ  lo_back_im01.OZJ  lo_back_s5_im03.ozj  new_Master_arrow02.OZT  new_Master_arrow03.OZT  new_Master_arrow04.OZT  new_Master_arrow05.OZT  new_Master_arrow07.OZT  new_Master_arrow08.OZT  newui_btn_empty.OZT  newui_btn_empty_big.OZT  newui_btn_empty_very_small.OZT  newui_button_cancel.OZT  newui_button_close.OZT  newui_button_ok.OZT  newui_chainfo_btn_pet.OZT  newui_chainfo_btn_quest.OZT  newui_expansion_btn.OZT  newui_item_box.OZT  newui_item_earring.ozt  newui_item_fairy.OZT  newui_item_gloves.OZT  newui_item_money2.OZT  newui_item_muunv2.ozt  newui_item_muunv21.ozt  newui_item_weapon(R).OZT  newui_menu02.OZJ  newui_menu_SD.OZJ  newui_msgbox_back.OZJ  newui_number1.OZT  newui_repair_00.OZT  newui_skill00.ozj  newui_skill2.OZJ  newui_skillbox.OZJ  newui_skillbox2.OZJ  newui_statusicon.OZJ  newui_statusicon2.OZJ  newui_statusicon3.OZJ  op2_back1.OZT
ClientBuild_192.168.99.200/Data/Item/: Absolute_lance01A.ozj  Absolute_lance01B.ozj  Absolute_lance01C.ozj  Absolute_lance02.ozj  Absoluteclaw.ozj  Absoluteclaw2.ozj  Absoluteclaw_render.ozj  Alchemistmuun.bmd  Alchemistmuun_01.ozj  Alchemistmuun_01_r.ozj  Alchemistmuun_02.ozj  Alchemistmuun_03.ozj  AngelandDevilWings.bmd  Arrows01.bmd  Arrows02.bmd  Axe01.bmd  Axe02.bmd  Axe03.bmd  Axe04.bmd  Axe05.bmd  Axe06.bmd  Axe07.bmd  Axe08.bmd  Axe09.bmd  BC_GM_RF02Cloak4d.ozj  BC_GM_RF02Cloak4db.ozt  Bow01.bmd  Bow03.bmd  Bow04.bmd  Bow05.bmd  Bow06.bmd  Bow18.bmd  ClawTheKingv2DcMaker.ozj  ClawTheKingv2DcMakerx.ozj  Cloak0220_RHMakers.ozj  Cloak0220_RHMakers.ozt  Cloak02DL.bmd  Cloak02RF.bmd  Cloak10220_RHMakers.ozt  CrossBow01.bmd  (+424 more)
ClientBuild_192.168.99.200/Data/Launcher/: index.html
ClientBuild_192.168.99.200/Data/Local/: CBGetMain.bin.bak  Item.bmd  ItemAddOption.bmd  ItemSetType.bmd  License.json  Main.json  Mix.bmd  ServerList.bmd  credit.bmd  mix.txt
ClientBuild_192.168.99.200/Data/Logo/: DK_arms.OZJ  DK_body.OZJ  DK_collar.OZJ  DK_face.OZJ  DK_hair1.OZT  DK_hair4.OZT  KHQDK_arms.ozj  KHQDK_body.ozj  KHQDK_face.ozj  KHQSkinClass103.ozj  KHQdarkload_upper.ozj  KHQdarkload_upper2.ozj  KHQelf_body.ozj  KHQelf_face.ozj  KHQmagi_body.ozj  KHQmagum_body.ozj  KHQnewmagi_epole.ozj  KHQnewmagi_face.ozj  Login_Back01.OZJ  MU-logo - Copy.ozt  MU-logo_g.OZJ  NewFace01.bmd  NewFace02.bmd  NewFace03.bmd  NewFace04.bmd  NewFace05.bmd  alicebody.OZJ  aliceface.OZJ  aliceha.OZT  character_back01.OZJ  character_back02.OZJ  chasellight.OZJ  darkload_upper.OZJ  elf_face.OZJ  eye_f.OZJ  face3.OZJ  fight_body.OZJ  fight_eye.OZJ  fight_face.OZJ  fight_hair-alp.OZJ  (+7 more)
ClientBuild_192.168.99.200/Data/Monster/: BDragon002_Lilito.ozj  BDragon002alp_Lilito.ozt  Monster03.bmd
ClientBuild_192.168.99.200/Data/NPC/: KMUA_NPC_031.ozj  KMUA_NPC_419.ozj  KMUA_NPC_420.ozj  KMUA_NPC_421.ozj  KMUA_NPC_437.ozj
ClientBuild_192.168.99.200/Data/Object1/: Mace14.bmd
ClientBuild_192.168.99.200/Data/Object10/: bacc00.OZJ  bacc01.OZJ  boots_11.OZJ  kni00.OZJ  kni01.OZJ  lower_11.OZJ  upper_11.OZJ
ClientBuild_192.168.99.200/Data/Object106/: flag.ozj
ClientBuild_192.168.99.200/Data/Object11/: cloud.OZJ  gyg_R.OZJ  test12_H.OZJ  top02_R.OZJ  top03_B.OZJ  top04_B.OZJ
MuServer/: StartServer.bat  StartSyncedServer.bat  Start_192.168.99.200.bat  Start_GSCS_Only_192.168.99.200.bat  Stop_MuServer.bat  XoaLog.bat
MuServer/1.ConnectServer/: ConnectServer.ini  ServerList.ini
MuServer/2.DataServer/: 2025-7-10_3h48m47s.dmp  AllowableIpList.txt  ConfigAutoNap.ini  DataServer.ini
MuServer/3.JoinServer/: AllowableIpList.txt  JoinServer.ini
MuServer/5.Antihack/: AllowableIpList.txt  BlackList.txt  Chú Ý.txt  Configs.ini  XoaLog.bat
MuServer/6.DatEditor/: Config.ini  DelRac.bat  Item.txt
Server Source Mobile/: latest_logcat_now.txt  latest_logcat_perf.txt  latest_logcat_takumi_perfdetail.txt
Server Source Mobile/1.ConnectServer/: ConnectServer.sln
Server Source Mobile/2.DataServer/: DataServer.sln
Server Source Mobile/3.JoinServer/: JoinServer.sln
Server Source Mobile/4.GameServer/: GameServer.sln
Server Source Mobile/5.Main/: FixTele.xml  Main.vcxproj  Main.vcxproj.filters
android/: PORTING_TAKUMI_ANDROID.md  SETUP_VM_WINDOWS.md  SOKOL_MIGRATION.md  build_android.ps1  build_register_fix2.txt  copy_libs.bat  devias_logcat.txt  devias_logcat3.txt  erro_jogo.txt  erro_jogo1.txt  erro_jogo2.txt  erro_jogo3.txt  erro_jogo4.txt  gradle.properties  patch_16kb.py  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/SDL2/include/: SDL_ttf.h  coreclr_delegates.h
android/app/src/main/cpp/compat_include/: ShellAPI.h  conio.h  crtdbg.h
android/app/src/main/cpp/compat_include/gl/: gl.h
tools/: generate_android_skill_slot_assets.py  split_android_bottom_bar.py  sync_interface_assets.ps1
(+3501 files in other folders)
